2024-05-23T08:23:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9204676696 # 298
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-23
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 365 746 / 383 772
* notice: next accum: outdated-unq outdated-all / unq all: 365 746 / 384 773
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-09 2024-05-23]

2024-05-22T16:25:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9194981342 # 296
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 383 771
* notice: next accum: outdated-unq outdated-all / unq all: 365 746 / 383 772
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-05-08] / [2024-05-22]

2024-05-22T08:24:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9187898806 # 295
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-22
* notice: last 14d: unq all: 6 26
* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 382 770
* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 383 771
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-22]

2024-05-21T16:23:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9177982914 # 293