@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-05-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2024-05-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
